@@ -9,73 +9,35 @@ with qw(
     Starch::Plugin::ForState
 );
 
-sub BUILD {
+after BUILD => sub{
     my ($self) = @_;
+
     $self->log->tracef(
         'starch.state.new.%s',
         $self->id(),
     );
+
     return;
+};
+
+foreach my $method (qw(
+    save delete
+    reload rollback clear
+    mark_clean mark_dirty
+    set_expires reset_expires
+    reset_id
+)) {
+    around $method => sub{
+        my $orig = shift;
+        my $self = shift;
+
+        $self->log->tracef(
+            'starch.state.%s.%s',
+            $method, $self->id(),
+        );
+
+        return $self->$orig( @_ );
+    };
 }
-
-around force_save => sub{
-    my $orig = shift;
-    my $self = shift;
-
-    $self->log->tracef(
-        'starch.state.save.%s',
-        $self->id(),
-    );
-
-    return $self->$orig( @_ );
-};
-
-around force_reload => sub{
-    my $orig = shift;
-    my $self = shift;
-
-    $self->log->tracef(
-        'starch.state.reload.%s',
-        $self->id(),
-    );
-
-    return $self->$orig( @_ );
-};
-
-around mark_clean => sub{
-    my $orig = shift;
-    my $self = shift;
-
-    $self->log->tracef(
-        'starch.state.mark_clean.%s',
-        $self->id(),
-    );
-
-    return $self->$orig( @_ );
-};
-
-around rollback => sub{
-    my $orig = shift;
-    my $self = shift;
-
-    $self->log->tracef(
-        'starch.state.rollback.%s',
-        $self->id(),
-    );
-
-    return $self->$orig( @_ );
-};
-
-around force_delete => sub{
-    my $orig = shift;
-    my $self = shift;
-
-    $self->log->tracef(
-        'starch.state.delete.%s',
-        $self->id(),
-    );
-
-    return $self->$orig( @_ );
-};
 
 1;
